# necntp

./: LICENSE  README.md  pyproject.toml  setup.py  shm_reader.py  shm_writer.py
necntp/: shm_writer.py  shm_writer.py~
necntp/devices/: __init__.py  nitsuki7651.py  nitsuki7651.py~  nitsuki7651_2.py
