[tool.poetry]
name = "necntp"
version = "0.1.0"
description = "NTP syncronizer based on the NTPD's shared memory interface"
authors = ["r-yamada1998 <yamadier@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7,<4.0"
ntplib = "^0.4.0"
sysv-ipc = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
